Process Hacker

1.2.3.5
 * Added handle viewing/closing support
 * Fixed random crashes
 * Doesn't update threads/handles unless viewing them
 * Fixed most handle leaks

1.2.3.0
 * Fixed incorrect messages about "new services" (actually fixed this time)
 * Fixed Injector - now uses MinGW instead of Visual C++
 * "Create Process..." feature of Injector works on XP now
 * Added StartType column in services list

1.2.2.5
 * Now shows function parameters in call stack
 * Added Injector
 * Added "Get Symbol Name From Address..." and "Find SYSTEM processes with same Session ID"
 * Services list now displays a blank space when there is no PID
 * Fixed services with own process and interactive type
 * Fixed random crashes with the process list and services list
 * Added copyright information (to comply with VistaMenu and SplitButton licensing)
 * Now displays user names of most processes using the Terminal Server APIs
 * Fixed incorrect messages about "new services"
 * Added tray icon

1.2.1.5
 * Fixed disassemblies from PE window - they disassemble the right function now
 * Fixed UI inconsistencies
 * Allow Toolhelp module listings
 * Updated help
 * Fixed service start/stop buttons in service window

1.2.1.0
 * Can now display services
 * Displays services in process tooltips

1.2.0.5
 * Updated credits
 * Fixed crash when opening two thread inspectors with the same process and thread
 * Disassembler window can now display backward short jumps (>0x7fffffff)
 * Now unloads symbols for all other EXEs before opening the thread inspector
 * Improvements in symbol loading

1.2.0.0
 * Added PE Inspector (can read exe/dll/sys files and their properties)
 * Added "Search Online" menu item
 * Added highlighting of processes and threads
 * Added "Always on Top" menu item
 * Added status bar messages and log
 * Added "Go to Parent" menu item
 * Removed "Close Active Window" menu item - practically same as "Terminate Process"
 * Added disassembler