@@ -5,6 +5,7 @@ Process Hacker
  * Fixed random crashes
  * Doesn't update threads/handles unless viewing them
  * Fixed most handle leaks
+ * Fixed randomly changing process usernames
 
 1.2.3.0
  * Fixed incorrect messages about "new services" (actually fixed this time)
